--- a/WpfCritic/WpfCritic/View/AddMovieWindow.xaml
+++ b/WpfCritic/WpfCritic/View/AddMovieWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfCritic.AddMovie"
+﻿<Window x:Class="WpfCritic.AddMovieWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,7 +14,7 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Label Grid.Row="0" Content="Добавление фильма" Foreground="#FF00167C" FontFamily="Impact" FontSize="21.333" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-            <local:AddMovieUserControl Grid.Row="1" x:Name="AddMovieControl" DataContext="{Binding AddMovieViewModel}" />
+            <local:EditMovieUserControl Grid.Row="1" x:Name="AddMovieControl" DataContext="{Binding AddMovieViewModel}" />
             <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Name="okButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="OK" Click="okButton_Click" />
                 <Button Name="cancelButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Cancel" Click="cancelButton_Click" />
