--- a/WpfCritic/WpfCritic/View/MovieDetailsWindow.xaml
+++ b/WpfCritic/WpfCritic/View/MovieDetailsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfCritic.MovieDetails"
+﻿<Window x:Class="WpfCritic.MovieDetailsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
