--- a/WpfCritic/WpfCritic/View/MovieDetailsWindow.xaml
+++ b/WpfCritic/WpfCritic/View/MovieDetailsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfCritic"
         mc:Ignorable="d"
-        Title="MovieDetails" Height="471.872" Width="795.745" Closing="Window_Closing">
+        Title="Фильм" Height="471.872" Width="795.745" Closing="Window_Closing">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid Background="AliceBlue">
             <Grid Margin="4,8,4,8">
