--- a/WpfCritic/WpfCritic/App.xaml
+++ b/WpfCritic/WpfCritic/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfCritic"
-             StartupUri="View/AllMoviesWindow.xaml">
+             StartupUri="View/MenuWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
