--- a/WpfCritic/WpfCritic/View/AllGamesWindow.xaml
+++ b/WpfCritic/WpfCritic/View/AllGamesWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="WpfCritic.AllMoviesWindow"
+﻿<Window x:Class="WpfCritic.View.AllGamesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfCritic"
+        xmlns:local="clr-namespace:WpfCritic.View"
         xmlns:localdata="clr-namespace:WpfCritic.Model"
         mc:Ignorable="d"
-        Title="Все фильмы" Height="467.197" Width="474.32">
+        Title="Все игры" Height="300" Width="300">
     <Grid Background="AliceBlue">
         <Grid.Resources>
-            <DataTemplate DataType="{x:Type localdata:Movie}">
+            <DataTemplate DataType="{x:Type localdata:Game}">
                 <StackPanel>
                     <TextBlock Text="{Binding Path=Name}" FontWeight="Bold" FontSize="13.333" Background="{x:Null}" Foreground="#FF0056D3" />
                     <TextBlock Text="{Binding Path=ReleaseDate.Year, StringFormat='({0})'}" />
@@ -25,13 +25,13 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <Label Grid.Row="0" Name="MovieLabel" Content="Фильмы" Foreground="#FF00167C" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Impact" FontSize="16" />
-            <ListBox Grid.Row="1" Opacity="0.8" x:Name="MoviesListBox" MouseDoubleClick="MoviesListBox_MouseDoubleClick"
-            	ItemsSource="{Binding MovieMainList}" SelectedItem="{Binding SelectedMainMovie}" />
-            <local:EditMovieUserControl Grid.Row="2" x:Name="MovieControl" DataContext="{Binding EditMovieViewModel}" />
+            <Label Grid.Row="0" Name="MovieLabel" Content="Игры" Foreground="#FF00167C" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Impact" FontSize="16" />
+            <!--<ListBox Grid.Row="1" Opacity="0.8" x:Name="GamesListBox" MouseDoubleClick="GamesListBox_MouseDoubleClick"
+            	ItemsSource="{Binding }" SelectedItem="{Binding }" />
+            <local:EditGameUserControl Grid.Row="2" x:Name="GameControl" DataContext="{Binding }" />-->
             <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Name="addButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Добавить" Click="addButton_Click" />
-                <Button Name="menuButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Главное меню" Click="menuButton_Click" />
+                <Button Name="addButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Добавить" />
+                <Button Name="menuButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Главное меню" />
             </StackPanel>
         </Grid>
     </Grid>
