--- a/WpfCritic/WpfCritic/View/AllMoviesWindow.xaml
+++ b/WpfCritic/WpfCritic/View/AllMoviesWindow.xaml
@@ -27,7 +27,7 @@
 
             <Label Grid.Row="0" Name="MovieLabel" Content="Фильмы" Foreground="#FF00167C" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Impact" FontSize="16" />
             <ListBox Grid.Row="1" Opacity="0.8" x:Name="MoviesListBox" MouseDoubleClick="MoviesListBox_MouseDoubleClick"
-            	ItemsSource="{Binding MovieMainList}" SelectedItem="{Binding SelectedMainMovie}" />
+            	ItemsSource="{Binding MovieCollection}" SelectedItem="{Binding SelectedMovie}" />
             <local:EditMovieUserControl Grid.Row="2" x:Name="MovieControl" DataContext="{Binding EditMovieViewModel}" />
             <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Name="addButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Добавить" Click="addButton_Click" />
