--- a/WpfCritic/WpfCritic/View/GameDetailsWindow.xaml
+++ b/WpfCritic/WpfCritic/View/GameDetailsWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfCritic.MovieDetailsWindow"
+﻿<Window x:Class="WpfCritic.View.GameDetailsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfCritic"
+        xmlns:local="clr-namespace:WpfCritic.View"
         mc:Ignorable="d"
-        Title="Фильм" Height="471.872" Width="795.745" Closing="MovieDetailsWindow_Closing">
+        Title="GameDetailsWindow" Height="471.872" Width="795.745" Closing="GameDetailsWindow_Closing" >
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid Background="AliceBlue">
             <Grid Margin="4,8,4,8">
@@ -34,9 +34,9 @@
                             <ColumnDefinition Width="auto" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Name="name" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Impact" FontSize="21.333" FontWeight="Bold" Foreground="#FF00167C" Text="{Binding Movie}" />
-                        <Label Grid.Column="0" Grid.Row="1" Content="Runtime:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                        <TextBlock Grid.Column="1" Grid.Row="1" Name="runtime" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Runtime}" />
+                        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Name="name" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Impact" FontSize="21.333" FontWeight="Bold" Foreground="#FF00167C" Text="{Binding Game}" />
+                        <Label Grid.Column="0" Grid.Row="1" Content="Developer:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="1" Name="developer" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Developer}" />
                         <Label Grid.Column="0" Grid.Row="2" Content="Official site:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
                         <TextBlock Grid.Column="1" Grid.Row="2" Name="officialSite" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding OfficialSite}" />
                         <Label Grid.Column="0" Grid.Row="3" Content="Company:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
@@ -88,7 +88,7 @@
                     <Button Name="addReview" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Add review" Click="addReview_Click" />
                     <Button Name="cancelButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Cancel" Click="cancelButton_Click" />
                 </StackPanel>
-            </Grid>    
+            </Grid>
         </Grid>
     </ScrollViewer>
 </Window>
