--- a/WpfCritic/WpfCritic/View/AllGamesWindow.xaml
+++ b/WpfCritic/WpfCritic/View/AllGamesWindow.xaml
@@ -9,7 +9,7 @@
         Title="Все игры" Height="467.197" Width="474.32" Closing="AllGamesWindow_Closing">
     <Grid Background="AliceBlue">
         <Grid.Resources>
-            <DataTemplate DataType="{x:Type localdata:GameVM}">
+            <DataTemplate DataType="{x:Type localdata:EntertainmentVM}">
                 <StackPanel>
                     <TextBlock Text="{Binding Path=Name}" FontWeight="Bold" FontSize="13.333" Background="{x:Null}" Foreground="#FF0056D3" />
                     <TextBlock Text="{Binding Path=ReleaseDate.Year, StringFormat='({0})'}" />
