--- a/WpfCritic/WpfCritic/View/EntertainmentDetailsWindow.xaml
+++ b/WpfCritic/WpfCritic/View/EntertainmentDetailsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfCritic.View"
         mc:Ignorable="d"
-        Title="GameDetailsWindow" Height="471.872" Width="795.745" Closing="GameDetailsWindow_Closing" >
+        Title="Деталі контента" Height="471.872" Width="795.745">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid Background="AliceBlue">
             <Grid Margin="4,8,4,8">
